--- a/Angela_yu/web_development/index.html
+++ b/Angela_yu/web_development/index.html
@@ -9,14 +9,71 @@
 </head>
 
 <body>
+    <table cellspacing="20">
+        <tr>
+            <td><img src="/Angela_yu/web_development/Images/yash passport size photo (2)mm.jpeg" alt="yash varshney profile picture"></td>
+            <td><h1>Yash Varshney</h1>
+
+                <p><em><strong>FrontEnd Developer</strong> and <strong>Flutter Lover</strong> </em></p>
+                <p>I am Computer Science student from KIET Group of Institutions ,Ghaziabad. I have a deep interest in programming
+                    and flutter. I like to do competitive programming . I am willing to learn new technologies.
+                    I believe in teamwork and producing results by applying full dedication to everything I do.</p></td>
+        </tr>
+    </table>
+    
     <h1>Yash Varshney</h1>
 
-    <p><em><strong>FrontEnd Developer</strong> and <strong>Flutter Lover</strong> </em></p>
+    <!-- <p><em><strong>FrontEnd Developer</strong> and <strong>Flutter Lover</strong> </em></p>
     <p>I am Computer Science student from KIET Group of Institutions ,Ghaziabad. I have a deep interest in programming
         and flutter. I like to do competitive programming . I am willing to learn new technologies.
-        I believe in teamwork and producing results by applying full dedication to everything I do.</p>
+        I believe in teamwork and producing results by applying full dedication to everything I do.</p> -->
         <hr>
-    <h2>Experience</h2>
+    <h2>Academic</h2>
+    <ul>
+        <li>Silver Stone Public School</li>
+        <li>KIET Group of Institutions</li>
+        <li> DSC</li>
+        <li>FOSSC</li>
+    </ul>
+    <hr>
+
+    <h1>Hobbies</h1>
+    <ol>
+        <li> <a href="#">Coding</a></li>
+        <li>Cricket</li>
+        <li>Reading</li>
+    </ol>
+    <table border="4">
+        <thead>
+            <tr>
+                <th>Dates</th>
+                <th>Work</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2022-Feb</td>
+                <td>Flutter Developer</td>
+            </tr>
+            <tr>
+                <td>2022-Jun</td>
+                <td>Web Developer</td>
+            </tr>
+        </tbody>
+  
+    </table>
+    <hr size="3" noshade="">
+    <h3>Skills</h3>
+    <table>
+        <tr>
+            <td>web development</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Flutter</td>
+            <td>⭐⭐⭐</td>
+        </tr>
+    </table>
 </body>
 
 </html>
