--- a/Angela_yu/web_development/index.html
+++ b/Angela_yu/web_development/index.html
@@ -74,6 +74,7 @@
             <td>⭐⭐⭐</td>
         </tr>
     </table>
+    <p> <a href="./contactMe.html" target="_blank" rel="noopener noreferrer"> Contact Me</a></p>
 </body>
 
 </html>
