--- a/Angela_yu/web_development/index.html
+++ b/Angela_yu/web_development/index.html
@@ -8,7 +8,24 @@
     <title>Yash Varshney Personal Sites</title>
 </head>
 
-<body>
+<style>
+body{
+    background-color:#eef2e697
+}
+
+hr{
+    background-color: #fff;
+    border-style: dotted none none;
+    width: 25%;
+    border-width: 5px;
+    border-color: grey
+    /* height: 0px; */
+}
+h1,h3{
+    color: #66BFBF;
+}
+</style>
+<body style="">
     <table cellspacing="20">
         <tr>
             <td><img src="/Angela_yu/web_development/Images/yash passport size photo (2)mm.jpeg" alt="yash varshney profile picture"></td>
@@ -62,7 +79,7 @@
         </tbody>
   
     </table>
-    <hr size="3" noshade="">
+    <hr >
     <h3>Skills</h3>
     <table>
         <tr>
