--- a/Angela_yu/CSS - My Site/index.html
+++ b/Angela_yu/CSS - My Site/index.html
@@ -9,6 +9,11 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
-    
+    <div class="top-container">
+        <h1>I'm Yash Varshney</h1>
+        <p>a programmer</p>
+    </div>
+    <div class="middle-container"></div>
+    <div class="bottom-container"></div>
 </body>
 </html>
