--- a/Angela_yu/CSS - My Site/index.html
+++ b/Angela_yu/CSS - My Site/index.html
@@ -10,10 +10,17 @@
 </head>
 <body>
     <div class="top-container">
+        <img src="/Angela_yu/CSS - My Site/images/cloud.png" alt="cloudImage" srcset="">
         <h1>I'm Yash Varshney</h1>
-        <p>a programmer</p>
+        <p>a <span class="pro">pro</span>grammer</p>
+        <img src="/Angela_yu/CSS - My Site/images/cloud.png" alt="cloudImage" srcset="">
+        <img src="/Angela_yu/CSS - My Site/images/mountain.png" alt="mountain-image" srcset="">
     </div>
-    <div class="middle-container"></div>
-    <div class="bottom-container"></div>
+    <div class="middle-container">
+
+    </div>
+    <div class="bottom-container">
+
+    </div>
 </body>
 </html>
